# khalzam-rs

./: Cargo.toml  LICENSE  README.MD  setup.sh
examples/: ex.rs  khalzam-cli.rs
src/: fingerprint.rs  lib.rs
src/db/: initdb.sql  mod.rs  pg.rs
